# openswitch-ops-tempd

./: .gitreview  CMakeLists.txt  DESIGN.md  README.md  groups  project.config  reviewers.config  tempd.c  tempd.h
include/: tempd.h  tempd_interface.h  tempd_plugins.h.in
ops-tests/: testsuite_gate@component.conf  testsuite_gate@feature.conf
plugins/i2c/: CMakeLists.txt  i2c-plugin.c
plugins/sysfs/: CMakeLists.txt  sysfs-plugin.c
src/: tempd.c  tempd_plugins.c
